Homepage fix spacing

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -67,7 +67,7 @@ a:hover {
     grid-row: span 2 / span 2;
   }
   .collectionsGrid-item:nth-child(2) {
-    grid-row: span 4 / span 4;
+    grid-row: span 2 / span 2;
   }
 }
 .collectionsGrid-item:nth-child(2) a,
